--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -71,12 +71,17 @@
                     </a>
                 </div>
 
-                <div class="nav-item">
-                    <a asp-controller="GestionBibliografica" asp-action="Index" class="nav-link">
-                        <i class="fas fa-user-friends"></i>
-                        <span class="nav-text">Gestión Bibliográfica</span>
-                    </a>
-                </div>
+                @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
+                {
+
+                    <div class="nav-item">
+                        <a asp-controller="GestionBibliografica" asp-action="Index" class="nav-link">
+                            <i class="fas fa-user-friends"></i>
+                            <span class="nav-text">Gestión Bibliográfica</span>
+                        </a>
+                    </div>
+
+                }
 
 
                 @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
