--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
                             </div>
                         </div>
 
-                        <!-- Estadísticas rápidas ACTUALIZADAS -->
+                        <!-- Estadísticas rápidas -->
                         <div id="estadisticasContainer">
                             @await Html.PartialAsync("_EstadisticasPartial", estadisticas)
                         </div>
