--- a/Views/Autor/_TabAutores.cshtml
+++ b/Views/Autor/_TabAutores.cshtml
@@ -120,7 +120,7 @@
                 <a href="#" class="page-link js-page" data-page="@pag.TotalPaginas" title="Última"><i class="fas fa-angle-double-right"></i></a>
             </li>
 
-            <!-- ✅ SELECT SIN C# EN ATRIBUTOS -->
+            <!-- SELECT SIN C# EN ATRIBUTOS -->
             <li class="ms-2">
                 @{
                     var rpps = new[] { 20, 50, 100 };
@@ -153,7 +153,7 @@ else
     </div>
 }
 
-<!-- Modales (IMPORTANTE: returnUrl para volver al tab actual) -->
+<!-- Modales-->
 <!-- Modal Agregar -->
 <div class="modal fade modal-autores" id="modalAgregarAutor" tabindex="-1">
     <div class="modal-dialog">
